tests/cases/standard-library/ok/format-float-llvm.ari
fn main() -> i64 {
  let defaulted: f32 = 1.5f32;
  println("value={:.1} default={} whole={:.0}", 1.26f64, defaulted, 6.0f64);
  println("round={:.2} carry={:.0} neg={:.1}", 1.125f64, 9.5f64, -2.5f64);
  return 0;
}
