tests/cases/standard-library/errors/cmp/std-cmp-order-operator-missing-ord.ari
struct Score {
  value: i64,
}

fn main() -> i64 {
  let left = Score { value: 1 };
  let right = Score { value: 2 };
  if left < right {
    return 1;
  }
  return 0;
}
